--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
+    "lint:fix": "nx workspace-lint && ng lint --fix",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
@@ -61,6 +62,7 @@
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
     "prettier": "2.0.4",
