--- a/angular.json
+++ b/angular.json
@@ -1,35 +1,35 @@
 {
   "version": 1,
   "projects": {
-    "tapai-balazs-github-search": {
+    "github-search": {
       "projectType": "application",
       "schematics": {},
-      "root": "apps/tapai-balazs-github-search",
-      "sourceRoot": "apps/tapai-balazs-github-search/src",
+      "root": "apps/github-search",
+      "sourceRoot": "apps/github-search/src",
       "prefix": "githubsearch",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/apps/tapai-balazs-github-search",
-            "index": "apps/tapai-balazs-github-search/src/index.html",
-            "main": "apps/tapai-balazs-github-search/src/main.ts",
-            "polyfills": "apps/tapai-balazs-github-search/src/polyfills.ts",
-            "tsConfig": "apps/tapai-balazs-github-search/tsconfig.app.json",
+            "outputPath": "dist/apps/github-search",
+            "index": "apps/github-search/src/index.html",
+            "main": "apps/github-search/src/main.ts",
+            "polyfills": "apps/github-search/src/polyfills.ts",
+            "tsConfig": "apps/github-search/tsconfig.app.json",
             "aot": true,
             "assets": [
-              "apps/tapai-balazs-github-search/src/favicon.ico",
-              "apps/tapai-balazs-github-search/src/assets"
+              "apps/github-search/src/favicon.ico",
+              "apps/github-search/src/assets"
             ],
-            "styles": ["apps/tapai-balazs-github-search/src/styles.css"],
+            "styles": ["apps/github-search/src/styles.css"],
             "scripts": []
           },
           "configurations": {
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "apps/tapai-balazs-github-search/src/environments/environment.ts",
-                  "with": "apps/tapai-balazs-github-search/src/environments/environment.prod.ts"
+                  "replace": "apps/github-search/src/environments/environment.ts",
+                  "with": "apps/github-search/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -58,50 +58,50 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "tapai-balazs-github-search:build"
+            "browserTarget": "github-search:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "tapai-balazs-github-search:build:production"
+              "browserTarget": "github-search:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "tapai-balazs-github-search:build"
+            "browserTarget": "github-search:build"
           }
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": ["apps/tapai-balazs-github-search/src/**/*.ts"]
+            "lintFilePatterns": ["apps/github-search/src/**/*.ts"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
-            "jestConfig": "apps/tapai-balazs-github-search/jest.config.js",
+            "jestConfig": "apps/github-search/jest.config.js",
             "passWithNoTests": true
           }
         }
       }
     },
-    "tapai-balazs-github-search-e2e": {
-      "root": "apps/tapai-balazs-github-search-e2e",
-      "sourceRoot": "apps/tapai-balazs-github-search-e2e/src",
+    "github-search-e2e": {
+      "root": "apps/github-search-e2e",
+      "sourceRoot": "apps/github-search-e2e/src",
       "projectType": "application",
       "architect": {
         "e2e": {
           "builder": "@nrwl/cypress:cypress",
           "options": {
-            "cypressConfig": "apps/tapai-balazs-github-search-e2e/cypress.json",
-            "tsConfig": "apps/tapai-balazs-github-search-e2e/tsconfig.e2e.json",
-            "devServerTarget": "tapai-balazs-github-search:serve"
+            "cypressConfig": "apps/github-search-e2e/cypress.json",
+            "tsConfig": "apps/github-search-e2e/tsconfig.e2e.json",
+            "devServerTarget": "github-search:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "tapai-balazs-github-search:serve:production"
+              "devServerTarget": "github-search:serve:production"
             }
           }
         },
@@ -109,7 +109,7 @@
           "builder": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": [
-              "apps/tapai-balazs-github-search-e2e/**/*.{js,ts}"
+              "apps/github-search-e2e/**/*.{js,ts}"
             ]
           }
         }
@@ -140,5 +140,5 @@
       "unitTestRunner": "jest"
     }
   },
-  "defaultProject": "tapai-balazs-github-search"
+  "defaultProject": "github-search"
 }
