--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --coverage",
     "lint": "nx workspace-lint && ng lint",
     "lint:fix": "nx workspace-lint && ng lint --fix",
     "e2e": "ng e2e",
