--- a/angular.json
+++ b/angular.json
@@ -17,14 +17,8 @@
             "polyfills": "apps/github-search/src/polyfills.ts",
             "tsConfig": "apps/github-search/tsconfig.app.json",
             "aot": true,
-            "assets": [
-              "apps/github-search/src/favicon.ico",
-              "apps/github-search/src/assets"
-            ],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "apps/github-search/src/styles.css"
-            ],
+            "assets": ["apps/github-search/src/favicon.ico", "apps/github-search/src/assets"],
+            "styles": ["./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css", "apps/github-search/src/styles.css"],
             "scripts": []
           },
           "configurations": {
