--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,10 @@
             "tsConfig": "apps/github-search/tsconfig.app.json",
             "aot": true,
             "assets": ["apps/github-search/src/favicon.ico", "apps/github-search/src/assets"],
-            "styles": ["./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css", "apps/github-search/src/styles.css"],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "apps/github-search/src/styles.css"
+            ],
             "scripts": []
           },
           "configurations": {
