--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "nx workspace-lint && ng lint",
     "lint:fix": "nx workspace-lint && ng lint --fix",
     "e2e": "ng e2e",
+    "e2e:watch": "ng e2e --watch",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
@@ -59,7 +60,7 @@
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "~5.0.1",
-    "cypress": "^4.1.0",
+    "cypress": "^5.4.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
