--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,10 @@
             "polyfills": "apps/github-search/src/polyfills.ts",
             "tsConfig": "apps/github-search/tsconfig.app.json",
             "aot": true,
-            "assets": ["apps/github-search/src/favicon.ico", "apps/github-search/src/assets"],
+            "assets": [
+              "apps/github-search/src/favicon.ico",
+              "apps/github-search/src/assets"
+            ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "apps/github-search/src/styles.css"
