--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,8 @@
             "aot": true,
             "assets": [
               "apps/github-search/src/favicon.ico",
-              "apps/github-search/src/assets"
+              "apps/github-search/src/assets",
+              "apps/github-search/src/_redirects"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
